# llama-gguf

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  TODO.md  build.rs
.github/workflows/: ci.yml
benches/: quantization.rs
docs/: GPU_ONLY_ENGINE_ANALYSIS.md  MODEL_COMPATIBILITY.md  PROFILING.md
docs/plans/: 2026-02-02-phase1-foundation.md  2026-02-13-pgvector-rag-design.md  2026-02-13-pgvector-rag-implementation.md  2026-03-03-hailort-backend-design.md  2026-03-03-hailort-backend-implementation.md
examples/: attention_decompose.rs  attention_scores_debug.rs  check_bias.rs  check_bias_bytes.rs  check_biases.rs  check_config.rs  check_head_layout.rs  check_output_weight.rs  check_rope_type.rs  check_tensor_shapes.rs  check_top_predictions.rs  check_weights.rs  compare_attention_patterns.rs  compare_backend_manual.rs  compare_hidden_states.rs  compare_model_vs_manual.rs  compare_single_layer.rs  debug_ffn.rs  debug_forward_pass.rs  debug_kv_cache.rs  debug_layer0.rs  debug_layer0_detail.rs  debug_multi_token.rs  debug_multipos_attention.rs  debug_q6k_layout.rs  debug_token_1.rs  dump_our_logits.rs  layer0_detailed.rs  layer_by_layer_debug.rs  logit_comparison.rs  minimal_test.rs  test_actual_layer0.rs  test_bias_before_rope.rs  test_components.rs  test_embedding.rs  test_gqa_mapping.rs  test_neox_rope.rs  test_partial_layers.rs  test_position_issue.rs  test_rope_bias_order.rs  (+19 more)
man/man1/: llama-gguf-bench.1  llama-gguf-chat.1  llama-gguf-download.1  llama-gguf-embed.1  llama-gguf-info.1  llama-gguf-models.1  llama-gguf-quantize.1  llama-gguf-rag.1  llama-gguf-run.1  llama-gguf-serve.1  llama-gguf-sysinfo.1  llama-gguf.1
proto/: distributed.proto
scripts/: check_bias_values.py  check_ggml_types.py  check_norm_weights.py  check_output_weight.py  check_tokenizer.py  check_top_tokens.py  compare_dequant_values.py  compare_embeddings.py  compare_full_forward.py  compare_hidden_states.py  compare_layer0.py  compare_layer0_detailed.py  compare_layer0_step_by_step.py  compare_q_projection.py  compare_reference.py  compare_tinyllama_states.py  compare_with_llama_cpp.py  debug_logits.py  debug_single_token.py  extract_hidden_states.py  extract_llama_cpp_logits.py  get_llama_cpp_logits.py  layer_by_layer_reference.py  llama_cpp_generate.py  python_states.json  reference_layer0.py  rust_states.json  test-metal.sh  test_rmsnorm.py  test_rope.py  test_vec_mat.py  trace_hidden_states.py  trace_layer0.py  trace_layer0_reference.py  verify_embedding.py  verify_embedding_layout.py  verify_embedding_values.py  verify_embeddings.py  verify_layer0.py  verify_layer0_full.py  (+3 more)
src/: client.rs  config.rs  engine.rs  engine_batched.rs  huggingface.rs  lib.rs  main.rs
src/backend/: error.rs  mod.rs  tensor_parallel.rs
src/distributed/: auto_shard.rs  config.rs  coordinator.rs  fault.rs  load_balancer.rs  mod.rs  model.rs  pipeline.rs  shard.rs  tensor_parallel_distributed.rs  tensor_transfer.rs
src/gguf/: constants.rs  error.rs  mod.rs  quantize.rs  reader.rs  types.rs  writer.rs
src/model/: architecture.rs  bert.rs  cache.rs  config.rs  deltanet.rs  embeddings.rs  kv_quantized.rs  kv_turboquant.rs  layers.rs  llama.rs  loader.rs  lora.rs  mamba.rs  mod.rs  moe.rs  paged.rs  speculative.rs
src/onnx/: config.rs  error.rs  loader.rs  (+3 more)
tests/: distributed_integration_test.rs  dx12_integration.rs  embedded_model_test.rs  gguf_reader_test.rs  hailo_integration_test.rs  hidden_state_test.rs  metal_integration.rs  rag_integration_test.rs
(+124 files in other folders)
